# reverse-engineering-py

./: .gitignore  README.md  pyproject.toml
example/bss/: main.py
example/invitro_bss/: compute_baselines.py  dataset.py  main.py  plot_summary_figure.py  plot_weights_trajectory.py
example/maze/: env.py  main.py  plot.py  utils.py
example/maze/output/: Eest_E0.25.npy
reverse_engineering/: analysis.py  pomdp.py
reverse_engineering/example/bss/: main.py
reverse_engineering/example/invitro_bss/: load_data.py  main.py  plot_summary_figure.py  plot_weights_trajectory.py
reverse_engineering/example/maze/: main.py
reverse_engineering/utils/: analysis_utils.py  utils.py  variable_conversion.py
test/: test_bss.py  test_invitro_bss.py  test_maze.py  test_variable_conversion.py
test/correct_results/: bss.npz  invitro_bss_bic.npz  invitro_bss_ctrl.npz  invitro_bss_dzp.npz  invitro_bss_mix0.npz  invitro_bss_mix50.npz  maze_trial.npz
